# homebrewed-shell

./: CMakeLists.txt  README.md  loop_exec.c  rmdir.c
include/: placeholder.txt
src/: Makefile  env_vars  export  export.c  loop_exec_original.c  ls  ls.c  mkdir.c  rmdir.c  wanna_be_bash.c  whoami  whoami.c
